<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_1_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_1"/>

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_1_first_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_1_second_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_1_third_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/france"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/usa"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/uruguay"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2_container"
            style="@style/question_container_style">
            <TextView
                style="@style/question_style"
                android:text="@string/question_2"/>

            <RadioGroup
                android:id="@+id/question_2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_2_first_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_2_second_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_2_third_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/argentina"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/bolivia"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/peru"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_first_checkbox"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/question_3_first_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/venezuela"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_second_checkbox"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/question_3_second_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/begium"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_third_checkbox"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/question_3_third_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ecuador"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4_container"
            style="@style/question_container_style">
            <TextView
                style="@style/question_style"
                android:text="@string/question_4"/>

            <ImageView
                android:id="@+id/question_4_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/colombia"/>

            <EditText
                android:id="@+id/question_4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_5_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_5"/>

            <RadioGroup
                android:id="@+id/question_5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_5_first_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_5_second_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_5_third_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_first_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/france"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_second_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/argentina"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_third_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/brasil"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_6_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_6"/>

            <ImageView
                android:id="@+id/question_6_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/china_black" />

            <EditText
                android:id="@+id/question_6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_7_container"
            style="@style/question_container_style">
            <TextView
                style="@style/question_style"
                android:text="@string/question_7"/>

            <ImageView
                android:id="@+id/question_7_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/india" />

            <EditText
                android:id="@+id/question_7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:onClick="checkQuiz"/>
    </LinearLayout>
</ScrollView>
